--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </header>
 
-  
+
 
         <div class="container">
             <div class="boxs">
@@ -339,8 +339,7 @@
                     <p>10:00 AM - 10:00 PM</p>
                 </div>
             </div>
-            <p>© 2023 All Rights Reserved By Free Html Templates</p>
-            <p>© Distributed By ThemeWagon</p>
+            <p>© Distributed By Mahmood aqaad</p>
         </div>
     </footer>
     <!-- End footer  -->
