--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <p>10:00 AM - 10:00 PM</p>
                 </div>
             </div>
-            <p>© Distributed By Mahmood aqaad</p>
+            <p>&copy; Distributed By <span>Mahmood aqaad</span></p>
         </div>
     </footer>
     <!-- End footer  -->
