--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                 </div>
                 <div class="box">
                     <div class="img">
-                        <img src="images/o1.jpg" alt="">
+                        <img src="images/o2.jpg" alt="">
                     </div>
                     <div class="info">
-                        <p>Tasty Thursdays</p>
-                        <h4>20%<span>Off</span></h4>
+                        <p>Pizza Days</p>
+                        <h4>15%<span>Off</span></h4>
                         <button class="btn">Order Now <i class="fa-solid fa-cart-shopping"></i> </button>
                     </div>
                 </div>
